# gwi-challenge-python-v1

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dinopedia/: config.py  settings.py  urls.py
dinopedia/dinosaurs/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
dinopedia/dinosaurs/migrations/: 0001_initial.py
dinopedia/dinosaurs/test/: factory.py  tests.py
